# snu_llm_course

./: .gitignore  README.md
finetune_pipeline/: README.md  main.py  pyproject.toml
finetune_pipeline/dpr/: finetune.py  model.py  trainer.py
finetune_pipeline/specter2/: finetune.py  model.py
finetune_pipeline/splade/: finetune.py
