[project]
name = "snu-retrieval-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "adapters>=1.2.0",
    "datasets>=3.6.0",
    "faiss-cpu>=1.11.0",
    "hf-xet>=1.1.3",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pyright>=1.1.401",
    "ruff>=0.11.13",
]
